--- a/WindowsFormsApp1/Form3.resx
+++ b/WindowsFormsApp1/Form3.resx
@@ -625,4 +625,7 @@
         JaB8lIvwrwWrQ0443ESHrjhcIwAAALxhEP1/3+03vnWQ/qwAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="colorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
