--- a/WindowsFormsApp1/ThemeForm.resx
+++ b/WindowsFormsApp1/ThemeForm.resx
@@ -261,6 +261,86 @@
         AQAAAAAAAACANgKBOgAAAAAAAAAA0EYgUAcAAAAAAAAAANqGF/T/FLM/dK8QYFgAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBw0PDQ0NDQ8PDQ8NDw0NDw0PDw8NDQ0PFREWFhUVFRUY
+        HSggGBolHRUVITEhJSkrLi4uFx83RDMtNygtLjf/2wBDAQoKCg4NDhoQEBsvJSAlLS0tLS0tLS0tLS0t
+        LS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS3/wAARCADhAOEDAREAAhEBAxEB/8QA
+        HAABAQADAQEBAQAAAAAAAAAAAAEFBgcEAwII/8QAPhAAAgIAAggDBQYDBwUAAAAAAAECAwQRBQYSITFB
+        UWETcYEHIjJSoRRCYpGxwSMkcjOCo7Kz4fBDU3OSov/EABsBAQEAAgMBAAAAAAAAAAAAAAABBAUCAwYH
+        /8QANREBAAICAQMCAwYFAgcAAAAAAAECAxEEBSExEkFRsfAGInGBoeETMmGR0SPxFBUkM0JDwf/aAAwD
+        AQACEQMRAD8A7gAAoAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAoEAAAAAAAAAAAAAAAAAAAABQIBQIBQIAA
+        AAAFAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACgQAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAUCAAAAAB8774Vxc7JxriuMpyUYr1YWI32hgMbrvo2rd4srX0rg2v
+        SUsov8ybZuLpvKyfy0n5fNi5+03AJ7qr/V0J/wCcnrhmR0DmT7R9fk++F9o+jZv3lfV3lCE1/hyk/oWJ
+        iXDJ0PmU/wDHf5/502DR2nMHid1GIrsk9+xtbNmX9Dyf0LprcuDJinWSsx+LIB1AAAAAAeXHaTw2HWd9
+        1dWfBTklKXlHi/QOVaWvOqxuWvY32g6Orz2fGuy+StQ/1HEm4bDH0jl38U+Txx9p2Az31X+jw7f+cnqr
+        8WR/yDmfCPr8nvwmv2jbMs5W15/NXt/6bkctwxsnSuXj80/sz2B0lh71nRdXblxUZJyj5rivUMG+O1J1
+        aNfi9QcAAAAAAKAAgAAAA0vWvX2jC514fZtt4OfGEfL5n+S8+BwteKt107ouXlfet2r+rlWmNZMVipud
+        tkpPlm89ny5R9EjEvyfaHseL0vj8aPu17/Fh5WSbzbb82Y05bT7thGo8PzmzhuTa5l3PldvtTi7I5ZS3
+        J55Pfk+3Q7a8jJX3dWTDjydrRtumrXtBxWHcYWy8ercnCyTzS/DZxXk815Gdjz1u89z/ALO47/ewdp+H
+        t+35f2dX0JprD4yrxKJZ5ZbdcslZW+kl+63Pqdzx+fj5MF/RkjUsiHSAePSulKMLX4t89lcIrjOyXyxj
+        xbDnjx2yWitI3LmOsntHvnnDD/wI71lBp25fimuD7R4dWdOTNFHquB9ndx6s/wDb6+vxaJidKXWOTcmn
+        L4ms9qXnLi/zMO3JtZ6XDwsGGNUrDxOTOjdpllbMy902qk0WL2rI9eE0ndVKMozknHg82mvJrevQ76cm
+        1fLHzcTDnr6b1h0fVP2iSzjVjM7I8PE42wXV/Ov/AK8zNpki/h5LqP2ftij14O8fD/DplF0LIRsrkpwm
+        lKMotOMl1TObzUxMTqX7CAAAAAAAAADm+v8ArlsqeGw8vdWcJzT32yXGKfyLn8z3cFv6sl4rD0XRek/x
+        7RlyR932covulOTlJ5tvM1t7zae73FaxWNQ+ZwlUGkCx2FKBJURNaGZ1e05dhboWVTcJR4PjFrnGS5xf
+        NfuZuDkb+7ZgdQ6fj5eOa2jv7T8HdNWtO1Y7Dq2HuzjlG2rPN1zy684vinzXfNGa+d8rjX4+Scd/Mfr/
+        AFerS+kq8LRPEW57MFuistqyb3RjHu2HVSlr2itY7y4brTrFfibpTnLOTzjlFvYqj/24dur4t/kYubNr
+        tD33SelU41PVbvaWtNmvnvPdu9glAkSByiQAAWMmuAra1J3Ct/1A1wlh5qm6TdE37y4+G/nj+658eJtc
+        WSLw8t1vpEXic+Lz7x8f3dihJNKUWmmk00800+DTOx4xQAAAAAAANb15019lw2xCWzZepJSXGFa+OS77
+        1Fd5Z8iWnUM3p/Enk5op7e7hGNxDsm5PyS5JLgkazNf1WfS8eOuOkVq850uYXQgQCBFCihRHGfKw2vUT
+        WP7FjITscvAnF1XJe89njGWXNxf0bNrgyxen9Wh6706eTi9eOPvR+se8Mr7QNbIYuyEcO28PTB7DkpQd
+        l0s1Key9+SjuWeXGRct4rDXdC6Zel5yZa6+H/wBaA2arc2ncvXygQGxDiAFOQEAo/dNji008snxOWHJN
+        LbWYiY1Ls3sx0/41P2Sb96uO1U38v3oejaa7PsbeJ2+f9c4H/D5vXWPu2+f7/wCW9FaMAAAAAABxf2l6
+        V8XE2pPcpeDD+it5P857f0MbkX1D2v2c4vpxzln3aIa7T0yCRQByhEIAQErCkUAJiJmO8CtsTa0+VQIC
+        RCAQAAFKAAulbHqXpOWHxVdibyhJTa6x+8vWLZseJfddNX1jjRm41o9/Z3+LTSa3p70+qMl83UAAAAAP
+        hjsQqqbrnwqrstflGLf7AfzvrDY3clJ5uMIpvrLLNv8AM1vInb6d07HGPj1qxZ0M0CAUKiEAoEkhSdlC
+        CAUaAugAACaEJoCilASBJV7dEz2boPvkZPEnVph15o3jmH9Bar4jxMBhZPe1Wq2+rg3B/WJs5fLuTj/h
+        5rV+EyyhHQAAAADFa1yy0djO9FkfRrJ/qHZi75K/jDgOnX/M2/1Grz+YfUeN/wBqrHnU7gIBQ5dkQgEA
+        kqpAG4UEIACgSVCoAQgEFKAAivvgP7WH9SR3caf9SHG/8ku+aiv+QgvlstS9ZZ/q2bZ8z6lH/VX/AC+U
+        NgDBAAAABjdZaXPAY2Ed8nhr9lfiUG4/XIOVZ1aJfz/p1fzE2uEtmSfZpGuz+YfUeJb1YYljjGZAWEB5
+        ACCRQoTQACKFAIAAoSAKgQAAAigHs0TDavrXfP6GRxo++6806xzLvmplWzo+nrN3T9HZLL6ZG0fMufb1
+        ci8/1+XZmwxAAAAAGs9z3p7muoH89614B0XSqa/sJzo7uMX7j9YuL9TD5Fe0voXQ88ZeNEfD/ZgDCbkA
+        FAm9AIASBJAAFUogQAEULPYCIACTAEhQoFGZ1cobscks3ujFdZN7l+eX5mZxaeZYXUMsY8UzP4v6DwGG
+        VNNNK4VVwr89mKRnPmNrTaZmfd9wgAAAAAHNParob34YqK929Kmx/LdFN1yfnHOOf4V1OvJG423/AEHm
+        fwc38OfE/Nymccm0+Rrb19M6e83t+ThoAAFADQAQgFAbVWSZEGwApRCQA2gQABVVE/oQ6J7MtFeJiK5N
+        e7T/AB57t2a+Bf8Atv8A7rNthp6KxDyv2i5Wqfw49/lDrx2vGgAAAAoADxaY0dXisNdhrPhtjltcXCSe
+        cZLupJNeQcq2msxaPMP5/wBYNHzptnGxbNkJyrtiuCsXNdmt67NGFnx+76N0rmRycMT7sSYrZocZAgF3
+        oUnlUAFQIoQUu9iEAvkABAKgAHYCK9Wj6HOa6Le3yRkcbH6reqfZ15skY6TMu86k6H+y4SLnHZtvyssW
+        W+Cy9yHovq2bPw+Z8/lTyM839vEfg2AMMAAAAFAgADQPadq94kPtta4JQxKXHYXwW/3XufZ58InC9dw2
+        /R+dPGzanxPzcfurcZOL3NPI12Svpl9DrMWjcPwdSoQBpQoEAAJACjQhNAAOUTAEgAgIACxjmxWk3nUK
+        6Z7NdWPEmsTbH+FVJNJrdZat6XkuL75LqbXHSKxp5D7QdR/9FJ8+fw/f5fi6sdryQAAAAAFAgACTipJx
+        klJSTTTWaafFNAcV191VeEtzrWdNsm6JvNtbs3TJ9Vvaz4ryZj5adnsOhdU9X+jlnv7NJayMCY09Y/Jw
+        RSiEUACBQIAAEAAUCAUAijXtCtm1M1esxmIjBbor35z4quGfxefJLm+yZscGH0xuWo6v1KvFxaj+afEf
+        X6u7YLC101QpqjswrioxXbv1fPMyXzy97XtNrTuZfYOIAAAAAFAgAAB5dKaPpxVE8PfHarsWT5OLW9Si
+        +TTyafYOVbTWYtXy4Zrbq3dg75Vz97POcLEso315/EukluUly8ms8TNie76P1WORT0X/AJoa0zBmG/Qm
+        xQIIAAAAEkCKHLaA0A0ADIgy2gtEW4m2FdcNuc3sxjwT6tvlFcWzN4+DXefLX9Q59OLjm0u8auaErwWH
+        VMPem8pW2ZZOyeX0S4Jcl6mc+dcnkX5GScl/9mVDoAAAAAAAUABAAADH6d0PTjaJUXLL70LF8dU+Uo/8
+        3ptEmNuzFltivF6TqYcK1m0DdhL512RSlH3s4/BZDlZD8L6cnmjDzYn0DpXU6cqmp/mhgmYTcIAAABIA
+        CSAAAWAAoHu0Xo+y+2FdcHZOclGFcfim+nbnm3uWRl4cE73LE5nMx8bHN7y7nqfqzXgKd+zPEWJeLYuE
+        V8kOkV9Xv6JZ0Rp865vNycrJ67flHwbCVhgAAAAAAAFAgAAAAAYjWbQFWPo8OT2LIZypuSzlVLy5xe5N
+        c/NJkmImNO7BnvhvF6T3cM07oW7DWzrth4dkN8oLfHZ5Tg/vQe/f2a3NNGFmwvf9M6pTlU1Plh2YbboA
+        EAAAE0KXQhNABSj36K0ZbiLIV1Qc5zezCEeMn+y6vgjLw4PeWJzOZj4uOb3l2/U3VSrR9e1LZsxM45WW
+        pe7BcdivpHvxeXklnRGnzzn8/Jy8nqt49o+H7tkKwQAAAAAAAAAAAAAAAAAxGsmr9GPq2LPcshm6b4pO
+        dUnx84vdnHn5pMkxExqXbhzXw3i9J1LiOser9+FulVbDYmk5LZ313Q+et811XFGDnwzHeHu+l9Xpya+m
+        /azAmJ3jy3gECKpQKBAIAVltB6GuxVsK6oOcp/DFbs+rb5RXNmdgw+8sDnc/HxaTa0/X1+7t2qmrFOAr
+        3ZTvmkrLsuXyQ6R/XizMiNPnvN52Tl5PVfx7R8Pr4s8VhgAAAAAAAAABQIAAAAAAABj9N6Hw+NpdOIjm
+        vihOO6yqfKUJcn9HweaJMb7OdL2paLVnUuLa26qX4O3KaUoyb8O+K2a7ueT+Sf4efLPeYeXB7vadJ61X
+        LEY8vlq045PJ7suPYw7Rp6SJ3G4Q4qpy8x2AngCgkIiZnUK2DVrVu/GWquqG1wc5SzVdUfmm/wBI8X+Z
+        nYePEd5afqXVsfFrqO9vaPr2/q7Zq7oCjA1bFXvTkl4lzSU7Gv0iuS5eebMvw8FyeTk5F/Xkn9mWDHAA
+        AAAAAAAAABQAEAAAAAAAA+OMwlV9c6boRsrmspQks0/9+4WJmJ3DkeueolmG2r6dq7DLN7eW1dh10sX3
+        ofjW9c+GbxsmCJ8PTdL67amsebx8WhXUyi8mvJ8muxg3pNXsceSuSN1l8zhrs7FE+B+6qpSeUU35HOmO
+        bT2S1orG5bpqdqTdi2rJZ1UJ+9e1m5dVUnxf4uC75ZGxx4YrDzPVOu1x7x4e8/pH18P7uwaM0bRhao04
+        eChCPrKT5uT4t92dzxuTJbJabXncy9YcAAAAAAAAAAAAAKBAAFAgAAAAAAAGg62+z6u5TuwCjCcs5Twr
+        ajTY+brf/Tl2+F9t7OF8cWbTgdUy8W2vNfg5NpDR9lM5xnGUXB7M4TWzZW+kl+/BmvyYZrO3ueH1DFya
+        7rPd+cFgp2ySim9p7KyTk5PpFLfJ9kTFim/eXdyOXj49ZteXU9UvZ6oqNuOjktzWFzTcv/LJcvwL15o2
+        NKRWHieo9byciZrj7V/X9vm6LCCilGKUVFJKKWSSXBJHNolAAAAAAAAAAAAAAAoEAAAAAAAAAAAADGaZ
+        1fweMS+01KcorKNibhbFdNqO/Ls9xJiJdmLNfFb1UnUvxobVvBYPfh6VGeWXiSbssy6JvguyyEREeHPN
+        ycuad5LbZYroAAAAAAAAAAAAAAAAFAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAABQAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAf/2Q==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAJQAAAEAIACoYgIAFgAAACgAAAAAAQAAKAEAAAEAIAAAAAAAAFACABMLAAATCwAAAAAAAAAA
